--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 /* Basic CSS Reset */
 * {
@@ -120,7 +118,8 @@ legend {
   --color-error: #e76f51;
   --color-info: #457b9d;
 
-  --color-shadow: rgba(0, 0, 0, 0.5);
+  --color-shadow-black: rgba(0, 0, 0, 0.5);
+  --color-shadow-white: rgba(255, 255, 255, 0.5);
 }
 
 /* PREFLIGHT */
@@ -128,28 +127,32 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Poppins";
+  font-family: "Montserrat";
   background: var(--color-surface);
-  color: var(--color-9);
 }
 
 h1 {
   font-size: var(--font-size-h1);
   font-weight: 600;
+  line-height: 2;
 }
 
 h2 {
   font-size: var(--font-size-h2);
   font-weight: 500;
+  line-height: 2;
 }
 
 h3 {
   font-size: var(--font-size-h3);
   font-weight: 500;
+  line-height: 2;
 }
 
 p {
   font-size: var(--font-size-p);
+  line-height: 1.5;
+  letter-spacing: .6px;
 }
 
 .container {
@@ -158,7 +161,38 @@ p {
   margin: 0 auto;
 }
 
+.button {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  background: var(--color-secondary-dark);
+  color: var(--color-text-inverse);
+  box-shadow: 0 0 5px var(--color-shadow-black);
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  transition: all 350ms linear;
+  &:hover {
+    background: var(--color-secondary);
+  }
+}
+
+.card {
+  padding: min(1rem, 8%);
+  border-radius: 10px;
+  box-shadow: 0 0 5px var(--color-shadow-black);
+  transition: all 150ms linear;
+  &:hover {
+    scale: 1.01;
+    box-shadow: 0 0 10px var(--color-shadow-black);
+  }
+}
+
 /* STYLE */
+
+/* HEADER */
 header {
   background: transparent;
   max-width: 100dvw;
@@ -174,7 +208,7 @@ header {
 }
 header.hscroll {
   background: var(--color-primary);
-  box-shadow: 0 5px 10px var(--color-shadow);
+  box-shadow: 0 5px 10px var(--color-shadow-black);
 }
 
 header .container {
@@ -315,11 +349,7 @@ section#hero {
   z-index: 1;
   height: 100dvh;
   width: 100%;
-  background-image: url("../img/BANNER.jpeg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background: url("../img/BANNER.jpeg") center/cover no-repeat fixed;
   aspect-ratio: 16/9;
 }
 
@@ -348,26 +378,46 @@ section#hero {
   text-transform: uppercase;
 }
 .banner-text h1 span {
-  color: transparent;
-  text-shadow: -2px -2px 1px var(--color-secondary-light),
-    2px 2px 4px rgba(255, 255, 255, 0.397);
+  position: relative;
+  color: var(--color-primary-dark);
+  letter-spacing: 2px;
+  text-shadow: 0 0 5px var(--color-shadow-white);
 }
+.banner-text h1 span::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  color: transparent;
+  -webkit-text-stroke: 5px var(--color-secondary-light);
+}
+
 .banner-text h3 span {
   position: relative;
-  color: transparent;
+  color: var(--color-primary-dark);
   font-weight: 600;
-  text-shadow: -2px -2px 1px var(--color-secondary-light),
-    2px 2px 7px rgba(255, 255, 255, 0.397);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 0 0 5px var(--color-shadow-white);
 }
+.banner-text h3 span::before {
+  content: attr(data-text);
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  color: transparent;
+  -webkit-text-stroke: 5px var(--color-secondary-light);
+}
+
 .banner-text h3 span::after {
   content: "";
   position: absolute;
-  background: white;
+  background: var(--color-text-inverse);
   width: 4px;
   height: 100%;
-  right: calc(0 + 50px);
+  right: calc(0 + 3rem);
   top: 0;
-  animation: blink 2s infinite;
+  animation: blink 1.5s infinite;
 }
 
 @keyframes blink {
@@ -407,6 +457,12 @@ section#hero {
     transform: translateY(-10px);
     animation-timing-function: ease-out;
   }
+}
+
+@media (max-width: 768px) {
+  .banner-text h1 {
+  line-height: 1.2;
+}
 }
 
 /* ABOUT */
@@ -502,7 +558,7 @@ section#about .container {
   border: 3px solid var(--color-secondary-dark);
   border-radius: 50%;
   padding: 1%;
-  box-shadow: 2px 5px 5px var(--color-shadow);
+  box-shadow: 2px 5px 5px var(--color-shadow-black);
   transition: all 350ms ease-in;
 }
 
@@ -510,7 +566,7 @@ section#about .container {
   color: var(--color-surface);
   background: var(--color-secondary-dark);
   translate: 0 -7px;
-  box-shadow: 2px 12px 5px var(--color-shadow);
+  box-shadow: 2px 12px 5px var(--color-shadow-black);
 }
 
 @media (max-width: 1024px) {
@@ -543,13 +599,6 @@ section#about .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
-}
-
-.card {
-  padding: 20px;
-  border-radius: 10px;
-  border: 1px solid var(--color-border);
-  box-shadow: 0 0 5px var(--color-shadow);
 }
 
 .card span {
@@ -638,10 +687,6 @@ section#about .container {
   font-style: italic;
 }
 
-.timeline-text p {
-  text-align: justify;
-}
-
 .timeline-center {
   justify-content: center;
   display: flex;
@@ -679,7 +724,7 @@ section#about .container {
 
 .timeline-circle.expe img {
   border-radius: 50%;
-  border: min(3px, 2px) solid var(--color-primary-dark);
+  border: min(3px, 2px) solid var(--color-secondary-dark);
 }
 
 .timeline-progress {
@@ -797,29 +842,6 @@ section#closing .contact {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
-.contact form button,
-.contact form button:active {
-  background: var(--color-secondary-dark);
-  color: var(--color-text-inverse);
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 1px;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  transition: all 350ms linear;
-}
-
-.contact form button:hover {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-}
-
-.footer {
-  background-color: var(--color-primary);
-  color: var(--color-text-inverse);
-}
-
 @media (max-width: 1024px) {
   section#closing .container {
     grid-template-columns: 1fr;
@@ -832,6 +854,11 @@ section#closing .contact {
 }
 
 /* FOOTER */
+.footer {
+  background-color: var(--color-primary);
+  color: var(--color-text-inverse);
+}
+
 footer .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -857,7 +884,7 @@ footer .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 0.7rem;
 }
 
 .footer-link p,
@@ -876,7 +903,7 @@ footer .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 0.7rem;
 }
 
 .footer-copyright {
