--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,24 @@ legend {
   --color-shadow-white: rgba(255, 255, 255, 0.5);
 }
 
+.dark-mode {
+  --color-background: #121c1a;
+  --color-surface: #264653;
+  --color-primary: #1b313a;
+  --color-text: #e0e5e3;
+  --color-text-inverse: #264653;
+}
+
+::selection {
+  background: var(--color-primary);
+  color: var(--color-text-inverse);
+}
+
+.dark-mode ::selection {
+  background: var(--color-text);
+  color: var(--color-text-inverse);
+}
+
 /* PREFLIGHT */
 html {
   scroll-behavior: smooth;
@@ -129,6 +147,7 @@ html {
 body {
   font-family: "Montserrat";
   background: var(--color-surface);
+  transition: all 500ms linear;
 }
 
 h1 {
@@ -152,7 +171,7 @@ h3 {
 p {
   font-size: var(--font-size-p);
   line-height: 1.5;
-  letter-spacing: .6px;
+  letter-spacing: 0.6px;
 }
 
 .container {
@@ -162,31 +181,35 @@ p {
 }
 
 .button {
+  position: relative;
   display: inline-block;
   padding: 0.5rem 1rem;
   border-radius: 10px;
   border: none;
   cursor: pointer;
-  background: var(--color-secondary-dark);
+  background: var(--color-text);
   color: var(--color-text-inverse);
   box-shadow: 0 0 5px var(--color-shadow-black);
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 1px;
-  transition: all 350ms linear;
+  transition: all 500ms linear;
   &:hover {
     background: var(--color-secondary);
+    color: var(--color-text-inverse);
   }
 }
 
 .card {
+  background: transparent;
+  position: relative;
+  z-index: 1;
   padding: min(1rem, 8%);
   border-radius: 10px;
   box-shadow: 0 0 5px var(--color-shadow-black);
-  transition: all 150ms linear;
+  transition: all 500ms ease-in-out;
   &:hover {
-    scale: 1.01;
-    box-shadow: 0 0 10px var(--color-shadow-black);
+    box-shadow: 0 0 20px var(--color-shadow-black);
   }
 }
 
@@ -219,7 +242,7 @@ header .container {
 
 header .logo {
   cursor: default;
-  color: var(--color-text-inverse);
+  color: #f1faee;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -245,8 +268,8 @@ header nav a {
   letter-spacing: 1px;
   font-weight: 600;
   background: transparent;
-  transition: all 350ms linear;
-  color: var(--color-text-inverse);
+  transition: all 500ms linear;
+  color: #f1faee;
 }
 
 header nav a::before {
@@ -257,8 +280,8 @@ header nav a::before {
   bottom: 0;
   left: 0;
   z-index: 1;
-  background: var(--color-text-inverse);
-  transition: all 350ms linear;
+  background: #f1faee;
+  transition: all 500ms linear;
 }
 
 header nav a.active::before {
@@ -267,18 +290,17 @@ header nav a.active::before {
 }
 
 header nav a:hover {
-  background: rgba(0, 0, 0, 0.3);
-  color: var(--color-secondary);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 #overlay {
   position: fixed;
   inset: 0;
   z-index: -1;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.5);
   visibility: hidden;
   opacity: 0;
-  transition: all 350ms linear;
+  transition: all 500ms linear;
 }
 
 @media (max-width: 1024px) {
@@ -291,7 +313,7 @@ header nav a:hover {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    color: var(--color-text-inverse);
+    color: #f1faee;
   }
 
   header nav {
@@ -304,7 +326,7 @@ header nav a:hover {
     left: 0;
     top: -1000%;
     padding: 1rem 0;
-    transition: all 350ms linear;
+    transition: all 500ms linear;
   }
 
   header nav.hscroll {
@@ -366,7 +388,7 @@ section#hero {
 
 .banner-wrapper .container {
   text-align: center;
-  color: var(--color-text-inverse);
+  color: #f1faee;
 }
 
 .banner-text {
@@ -433,7 +455,7 @@ section#hero {
 .banner-text .btn {
   font-size: var(--font-size-h3);
   display: inline-block;
-  color: var(--color-0);
+  color: #f1faee;
   width: fit-content;
   animation: bounce 3s infinite linear;
   translate: 0 20px;
@@ -461,8 +483,8 @@ section#hero {
 
 @media (max-width: 768px) {
   .banner-text h1 {
-  line-height: 1.2;
-}
+    line-height: 1.2;
+  }
 }
 
 /* ABOUT */
@@ -487,9 +509,9 @@ section#about .container {
   align-items: center;
   overflow: hidden;
   box-shadow: none;
-  transition: all 350ms linear;
+  transition: all 500ms linear;
   &:hover {
-    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 7px var(--color-shadow-black);
   }
 }
 
@@ -503,7 +525,7 @@ section#about .container {
     transparent,
     transparent,
     transparent,
-    var(--color-secondary-dark)
+    var(--color-text)
   );
   transform: rotate(0deg);
   animation: rotate-border 5s linear infinite;
@@ -537,10 +559,11 @@ section#about .container {
   height: 100%;
   object-fit: cover;
   background: var(--color-surface);
+  transition: all 500ms linear;
 }
 
 .about-text {
-  color: var(--color-primary-dark);
+  color: var(--color-text);
 }
 
 .about-text .socmed {
@@ -550,23 +573,21 @@ section#about .container {
 }
 
 .about-text .socmed a {
+  position: relative;
+  z-index: 0;
   font-size: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--color-secondary-dark);
-  border: 3px solid var(--color-secondary-dark);
+  color: var(--color-text);
   border-radius: 50%;
   padding: 1%;
-  box-shadow: 2px 5px 5px var(--color-shadow-black);
-  transition: all 350ms ease-in;
-}
-
-.about-text .socmed a:hover {
-  color: var(--color-surface);
-  background: var(--color-secondary-dark);
-  translate: 0 -7px;
-  box-shadow: 2px 12px 5px var(--color-shadow-black);
+  border: 2px solid var(--color-text);
+  box-shadow: none;
+  transition: all 350ms ease-in-out;
+  &:hover {
+    box-shadow: 0 0 20px var(--color-text);
+  }
 }
 
 @media (max-width: 1024px) {
@@ -586,8 +607,8 @@ section#about .container {
 }
 
 /* SKILLS */
-#skill {
-  color: var(--color-primary-dark);
+#skill .container h2 {
+  color: var(--color-text);
 }
 .skill-container {
   display: flex;
@@ -596,6 +617,7 @@ section#about .container {
 }
 .softskill,
 .hardskill {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
@@ -606,10 +628,11 @@ section#about .container {
   display: flex;
   align-items: center;
   gap: 5px;
-  color: var(--color-secondary-dark);
+  color: var(--color-text);
 }
 .card p {
   font-size: min(1.25rem, 1rem);
+  color: var(--color-text);
 }
 
 @media (max-width: 1024px) {
@@ -629,7 +652,7 @@ section#about .container {
 /* EDUCATION & EXPERIENCES */
 #education,
 #experiences {
-  color: var(--color-primary-dark);
+  color: var(--color-text);
 }
 
 #education .container,
@@ -724,12 +747,12 @@ section#about .container {
 
 .timeline-circle.expe img {
   border-radius: 50%;
-  border: min(3px, 2px) solid var(--color-secondary-dark);
+  border: min(3px, 2px) solid var(--color-text);
 }
 
 .timeline-progress {
   z-index: -2;
-  background-color: var(--color-secondary-dark);
+  background-color: var(--color-text);
   width: min(0.2rem, 0.5rem);
   height: 100%;
   position: absolute;
@@ -799,6 +822,7 @@ section#about .container {
 }
 
 #closing .container {
+  color: var(--color-text);
   margin: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -832,7 +856,7 @@ section#closing .contact {
   border-radius: 10px;
   border: none;
   box-shadow: none;
-  transition: all 350ms linear;
+  transition: all 500ms linear;
   background: whitesmoke;
 }
 
@@ -854,9 +878,9 @@ section#closing .contact {
 }
 
 /* FOOTER */
-.footer {
-  background-color: var(--color-primary);
-  color: var(--color-text-inverse);
+footer {
+  background: var(--color-primary);
+  color: #f1faee;
 }
 
 footer .container {
@@ -869,8 +893,6 @@ footer .container {
     "copyright copyright copyright";
   gap: 1.5rem;
   padding: 1rem;
-  background-color: #264653;
-  color: var(--color-text-inverse);
 }
 
 .footer-logo {
@@ -914,9 +936,8 @@ footer .container {
 
 .footer-link a,
 .footer-nav a {
-  color: var(--color-text-inverse);
   text-decoration: none;
-  transition: color 350ms;
+  transition: color 500ms;
 }
 
 .footer-link a:hover,
@@ -937,6 +958,44 @@ footer .container {
   }
 }
 
+/* FLOATING BUTTON */
+.toggle-switch {
+  width: 50px;
+  height: 25px;
+  position: relative;
+  display: inline-block;
+}
+
+.toggle-switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f1faee;
+  transition: 0.4s;
+  border-radius: 100px;
+}
+
+.toggle-icon {
+  color: var(--color-primary);
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  font-size: 18px;
+  transition: left 0.4s ease-in-out;
+}
+
+.toggle-switch input:checked + .slider .toggle-icon {
+  left: 30px;
+}
+
 /* THANKS PAGE */
 body#thanks-page header {
   background: var(--color-primary);
@@ -950,18 +1009,4 @@ section#thanks {
 }
 section#thanks .container {
   max-width: min(60%, 85%);
-}
-section#thanks .container a {
-  background: var(--color-secondary);
-  color: var(--color-text-inverse);
-  padding: 0.5rem 1rem;
-  border-radius: 15px;
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 1.2px;
-  line-height: 3.5;
-  transition: all 350ms linear;
-  &:hover {
-    background: var(--color-secondary-light);
-  }
 }
