--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,5 +1,5 @@
 .dark-mode {
-  --color-background: #121c1a;
+  --color-background: #4a4e69;
   --color-surface: #292d3e;
   --color-primary: #31364a;
   --color-text: #e0e5e3;
