--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -358,19 +358,19 @@ section#about .container {
 
 .about-text .socmed a {
   position: relative;
-  z-index: 0;
+  z-index: 1;
   font-size: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: transparent;
+  border: 2px solid var(--color-text);
   color: var(--color-text);
   border-radius: 50%;
   padding: 1%;
-  border: 2px solid var(--color-text);
-  box-shadow: none;
   transition: all 350ms ease-in-out;
   &:hover {
-    box-shadow: 0 0 20px var(--color-text);
+    scale: 1.1;
   }
 }
 
