--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,36 +1,34 @@
+/* CONTAINER */
 .container {
   width: 100%;
-  max-width: var(--screen-width);
+  max-width: min(90%, 1440px);
   margin: 0 auto;
+  padding: var(--spacing-md);
 }
 
-.button {
-  display: inline-block;
-  text-align: center;
-  padding: 0.5rem 1rem;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-  background: var(--color-text);
-  color: var(--color-text-inverse);
-  box-shadow: 0 0 5px var(--color-shadow);
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 1px;
-  transition: all 500ms linear;
-  &:hover {
+/* BUTTON */
+.btn {
+    display: inline-block;
+    text-transform: uppercase;
     background: var(--color-text-inverse);
     color: var(--color-text);
-  }
+    padding: var(--spacing-sm) var(--spacing-md);
+    border-radius: var(--border-radius-md);
+    font-weight: var(--font-weight-md);
+    transition-duration: var(--transition-normal);
+    cursor: pointer;
+
+    &:hover {
+        background: var(--color-text);
+        color: var(--color-text-inverse);
+    }
 }
 
+/* CARD */
 .card {
-  background: transparent;
-  padding: min(1rem, 8%);
-  border-radius: 10px;
+  background: inherit;
   box-shadow: 0 0 5px var(--color-shadow);
-  transition: all 500ms ease-in-out;
-  &:hover {
-    box-shadow: 0 0 15px var(--color-shadow);
-  }
+  padding: var(--spacing-normal);
+  border-radius: var(--border-radius-md);
 }
+
