--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 @import url('reset.css');
 @import url('variables.css');
-@import url('base.css');
+@import url('preflight.css');
 @import url('components.css');
 @import url('pages.css');
-@import url('boxicons.min.css');
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('animations.css');
+@import url('properties.css');
+@import url('https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css');
