--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,40 +1,51 @@
-/* GLOBAL ROOT */
 :root {
-  /* FONT SIZE */
-  --font-size-base: 16px;
-  --font-size-h1: clamp(2.5rem, 2rem + 1.67vw, 4rem);
-  --font-size-h2: clamp(2rem, 1.5rem + 1.67vw, 3.5rem);
-  --font-size-h3: clamp(1.5rem, 1rem + 1.67vw, 3rem);
-  --font-size-h4: clamp(1.25rem, 1rem + 1.67vw, 2rem);
-  --font-size-p: clamp(1rem, 0.917rem + 0.28vw, 1.25rem);
+    /* COLOR */
+    --color-bg: #D4F1F4;
+    --color-text-inverse: #E1E7E0;
+    --color-text: #2B4560;
+    --color-primary: #09A9C8;
+    --color-accent: #05445E;
+    --color-shadow: rgba(0, 0, 0, 0.5);
 
-  /* EXTRAS */
-  --padding-1: min(1rem, 8%);
-  --screen-width: min(1360px, 90%);
+    /* TYPOGRAPHY */
+    --font-size-xxl: clamp(2rem, 2rem + 1.67vw, 4rem);
+    --font-size-xl: clamp(1.75rem, 1.75rem + 1.46vw, 3.5rem);
+    --font-size-lg: clamp(1.5rem, 1.5rem + 1.25vw, 3rem);
+    --font-size-md: clamp(1.25rem, 1.25rem + 1.04vw, 2.5rem);
+    --font-size-normal: clamp(1rem, 1rem + 0.21vw, 1.25rem);
+    --font-weight-bold: 700;
+    --font-weight-md: 600;
+    --font-weigght-sm: 500;
+    --font-weight-normal: 400;
+    --line-xl: 2;
+    --line-lg: 1.5;
+    --line-md: 1.25;
+    --line-normal: 1;
 
-  /* COLOR THEME */
-  --color-primary: #264653;
-  --color-primary-light: #2a5567;
-  --color-primary-dark: #1b313a;
 
-  --color-secondary: #2a9d8f;
-  --color-secondary-light: #3fbcaa;
-  --color-secondary-dark: #207066;
+    /* SPACING */
+    --spacing-xxl: 3rem;
+    --spacing-xl: 2.5rem;
+    --spacing-lg: 2rem;
+    --spacing-md: 1.5rem;
+    --spacing-normal: 1rem;
+    --spacing-sm: 0.5rem;
 
-  --color-background: #f1faee;
-  --color-surface: #e0e5e3;
+    /* BORDER */
+    --border-rounded: 50%;
+    --border-radius-lg: 100px;
+    --border-radius-md: 20px;
+    --border-radius-sm: 10px;
 
-  --color-text: #264653;
-  --color-text-light: #3fbcaa;
-  --color-text-inverse: #f1faee;
+    /* BREAKPOINT */
+    --screen-mobile: 768px;
+    --screen-tablet: 1024px;
+    --screen-desktop: 1440px;
+    --screen-fullhd: 1920px;
+    --screen-4k: 2560px;
 
-  --color-border: #a8c0bf;
-  --color-divider: #b0d0ce;
-
-  --color-success: #2a9d8f;
-  --color-warning: #e9c46a;
-  --color-error: #e76f51;
-  --color-info: #457b9d;
-
-  --color-shadow: rgba(0, 0, 0, 0.3);
+    /* TRANSITION */
+    --transition-long: 0.5s;
+    --transition-normal: 0.3s;
+    --transition-short: 0.2s;
 }
