--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -27,3 +27,21 @@
     clip-path: inset(0% 0 0% 0);
   }
 }
+
+@keyframes beat {
+  0% {
+    transform: scale(1);
+  }
+  14% {
+    transform: scale(1.2);
+  }
+  28% {
+    transform: scale(1);
+  }
+  42% {
+    transform: scale(1.2);
+  }
+  70% {
+    transform: scale(1);
+  }
+}
