--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -8,6 +8,7 @@ header {
   left: 0;
   z-index: 999;
   width: 100%;
+  height: 8.5dvh;
   background: transparent;
   color: #e1e7e0;
   display: flex;
@@ -22,11 +23,53 @@ header.scroll {
 }
 
 header .logo {
+  position: relative;
+  display: flex;
+  align-items: center;
   font-size: var(--font-size-md);
-  letter-spacing: 2px;
-  font-weight: var(--font-weight-bold);
-  padding: var(--spacing-sm);
+  user-select: none;
 }
+
+header .logo:nth-child(1), header .logo:nth-child(2) {
+ cursor: pointer;
+}
+
+.dropdown {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  top: -500%;
+  left: 0;
+  background: transparent;
+  width: 150%;
+  padding: 1rem;
+  border-radius: 0 0 10px 10px;
+  visibility: hidden;
+  transition: all 500ms linear;
+}
+
+.dropdown.show {
+  visibility: visible;
+  top: 100%;
+}
+.dropdown button {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 15px;
+  padding: 0.5rem;
+  &:hover {
+    color: var(--color-text-inverse);
+    background: var(--color-accent);
+  }
+}
+
+header.scroll .dropdown {
+  background: var(--color-primary);
+} 
+
+
 
 header .menu-bar {
   display: none;
@@ -69,52 +112,6 @@ header nav a.current::after {
   width: 100%;
 }
 
-.toggle-switch {
-  position: absolute;
-  right: -5%;
-  width: 50px;
-  height: 25px;
-  position: relative;
-  display: inline-block;
-}
-
-.toggle-switch input {
-  display: none;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #e1e7e0;
-  transition: 0.5s;
-  border-radius: 100px;
-}
-
-.toggle-icon {
-  color: var(--color-primary);
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  transform: translateY(-50%);
-  font-size: 18px;
-  transition: left 0.4s ease-in-out;
-}
-
-.toggle-switch input:checked + .slider .toggle-icon {
-  left: 30px;
-}
-
-@media (max-width: 1024px) {
-  .toggle-switch {
-    left: 50%;
-    translate: -50% 0;
-  }
-}
-
 #overlay {
   position: fixed;
   inset: 0;
@@ -138,7 +135,7 @@ header nav a.current::after {
   header nav {
     position: absolute;
     left: 0;
-    top: -1000%;
+    top: -500px;
     padding: var(--spacing-md);
     display: inline-block;
     background: transparent;
@@ -696,12 +693,29 @@ form button.btn {
   opacity: 0;
   scale: 0.95;
   color: #e1e7e0;
+  z-index: 2;
 }
 #contact .container .popup-message.show {
   visibility: visible;
   opacity: 1;
   scale: 1;
   pointer-events: all;
+}
+
+.popup-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  backdrop-filter: blur(5px);
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s linear;
+}
+
+.popup-message.show ~ .popup-overlay {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media (max-width: 1024px) {
