--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -14,7 +14,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-20px);
+    transform: translateY(var(--spacing-s));
   }
 }
 
