--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
-@import url('reset.css');
-@import url('variables.css');
-@import url('preflight.css');
-@import url('components.css');
-@import url('pages.css');
-@import url('animations.css');
-@import url('properties.css');
-@import url('https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css');
+@import url("reset.css");
+@import url("theme.css");
+@import url("font-size.css");
+@import url("swiper-modules.css");
+@import url("spacing.css");
+@import url("preflight.css");
+@import url("components.css");
+@import url("pages.css");
+@import url("animations.css");
+@import url("properties.css");
+@import url("https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css");
+@import url("https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css");
