--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -6,15 +6,20 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 10;
   width: 100%;
   height: 8.5dvh;
   background: transparent;
   color: #e1e7e0;
+  transition: all 500ms linear;
+  display: flex;
+  align-items: center;
+}
+
+header .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: all 500ms linear;
 }
 
 header.scroll {
@@ -22,16 +27,22 @@ header.scroll {
   box-shadow: 0 0 10px var(--color-shadow);
 }
 
-header .logo {
+header .container .logo {
   position: relative;
   display: flex;
   align-items: center;
-  font-size: var(--font-size-md);
   user-select: none;
 }
+header .container .logo i {
+  font-size: var(--font-size-1);
+}
 
-header .logo:nth-child(1),
-header .logo:nth-child(2) {
+header .container .logo h4 {
+  letter-spacing: 0.25rem;
+}
+
+header .container .logo:nth-child(1),
+header .container .logo:nth-child(2) {
   cursor: pointer;
 }
 
@@ -66,6 +77,7 @@ header .logo:nth-child(2) {
   opacity: 1;
 }
 .dropdown button {
+  font-size: var(--font-size-1);
   display: flex;
   align-items: center;
   gap: 10px;
@@ -77,11 +89,11 @@ header .logo:nth-child(2) {
   }
 }
 
-header.scroll .dropdown {
+header.scroll .container .dropdown {
   background: var(--color-primary);
 }
 
-header .menu-bar {
+header .container .menu-bar {
   display: none;
   cursor: pointer;
   aspect-ratio: 1/1;
@@ -124,26 +136,26 @@ header .menu-bar {
   rotate: -45deg;
 }
 
-header nav {
+header .container nav {
   display: flex;
-  gap: var(--spacing-md);
+  gap: var(--spacing-s);
 }
 
-header nav a {
+header .container nav a {
   position: relative;
   display: inline-block;
-  font-size: var(--font-size-normal);
-  font-weight: var(--font-weight-md);
+  font-size: var(--font-size-0);
+  font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 2px;
-  transition-duration: var(--transition-normal);
+  transition: all 300ms ease-in-out;
 
   &:hover {
     color: var(--color-accent);
   }
 }
 
-header nav a::after {
+header .container nav a::after {
   content: "";
   position: absolute;
   left: 0;
@@ -151,15 +163,15 @@ header nav a::after {
   width: 0%;
   height: 10%;
   background: #e1e7e0;
-  transition: var(--transition-normal);
-  border-radius: var(--border-radius-md);
+  transition: all 300ms ease-in-out;
+  border-radius: 20px;
 }
 
-header nav a.current::after {
+header .container nav a.current::after {
   width: 100%;
 }
 
-#overlay {
+header .container #overlay {
   position: fixed;
   inset: 0;
   z-index: -1;
@@ -168,54 +180,55 @@ header nav a.current::after {
   visibility: hidden;
   height: 100%;
   width: 100%;
-  transition-duration: var(--transition-long);
+  transition: all 500ms ease-in-out;
   backdrop-filter: blur(5px);
 }
 
 @media (max-width: 1024px) {
-  header .menu-bar {
+  header .container .menu-bar {
     display: block;
   }
 
-  header nav {
+  header .container nav {
     position: absolute;
     left: 0;
-    top: 100%;
-    padding: var(--spacing-md);
+    top: -500px;
+    padding: var(--spacing-s);
     display: inline-block;
     background: transparent;
     width: 100%;
-    transition: inherit;
     visibility: hidden;
     opacity: 0;
+    transition: all 0.5s linear;
   }
 
-  header nav.active {
+  header .container nav.active {
+    top: 100%;
     visibility: visible;
     opacity: 1;
   }
 
-  header nav.active ~ #overlay {
+  header .container nav.active ~ #overlay {
     visibility: visible;
     opacity: 1;
     inset: 0;
   }
 
-  header.scroll nav.active ~ #overlay {
+  header.scroll .container nav.active ~ #overlay {
     inset: 8.5dvh 0 0 0;
   }
 
-  header.scroll nav {
+  header.scroll .container nav {
     background: var(--color-primary);
   }
 
-  header nav a {
+  header .container nav a {
     display: block;
     position: relative;
     z-index: 1;
     font-size: 120%;
-    margin: var(--spacing-md) 0;
-    padding: var(--spacing-sm);
+    margin: var(--spacing-s) 0;
+    padding: var(--spacing-xs);
     text-align: center;
 
     &:hover {
@@ -223,31 +236,31 @@ header nav a.current::after {
     }
   }
 
-  header nav a::after {
+  header .container nav a::after {
     content: "";
     position: absolute;
     z-index: -1;
     left: 0;
     top: 50%;
     translate: 0 -50%;
-    border-radius: var(--border-radius-md);
+    border-radius: 20px;
     height: 100%;
     background: var(--color-primary);
-    transition: var(--transition-normal);
+    transition: all 300ms ease-in-out;
   }
 
-  header.scroll nav a::after {
+  header.scroll .container nav a::after {
     background: var(--color-accent1);
   }
 
-  header nav a.current::after {
+  header .container nav a.current::after {
     width: 100%;
   }
 
-  body.dark-mode header nav a.current {
+  body.dark-mode header .container nav a.current {
     color: var(--color-primary);
   }
-  body.dark-mode header nav a.current::after {
+  body.dark-mode header .container nav a.current::after {
     background: var(--color-accent);
   }
 }
@@ -256,7 +269,7 @@ header nav a.current::after {
 #hero {
   position: relative;
   display: flex;
-  height: 100dvh;
+  min-height: 100dvh;
   background: url("../img/BANNER.jpeg") no-repeat center center/cover;
   background-attachment: fixed;
 }
@@ -277,26 +290,28 @@ header nav a.current::after {
 }
 
 .banner-text {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-s);
   color: #e1e7e0;
   text-align: center;
 }
 
+.banner-text h1 {
+  letter-spacing: var(--spacing-xs);
+  line-height: 1;
+}
+
 .banner-text h1 span {
   color: var(--color-primary);
-  text-shadow: 0 0 10px var(--color-shadow);
 }
 
 .banner-text a {
   display: inline-block;
-  font-size: var(--font-size-xl);
-  font-weight: var(--font-weight-bold);
-  margin: var(--spacing-md) 0;
+  font-size: var(--font-size-4);
+  margin: var(--spacing-m);
   transition: all 500ms ease-in-out;
   animation: bounce 1500ms ease-in-out infinite;
-
-  &:hover {
-    animation: beat 1500ms ease-in-out infinite;
-  }
 }
 
 .banner-text h2 span {
@@ -307,6 +322,7 @@ header nav a.current::after {
   content: "";
   position: absolute;
   background: #e1e7e0;
+  border-radius: 100px;
   width: 1%;
   height: 100%;
   top: 50%;
@@ -324,33 +340,30 @@ header nav a.current::after {
 #about .container:first-child {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
-
-.about-text {
-  align-self: center;
+  place-items: center;
 }
 
 .about-text .social-icons {
   display: flex;
-  gap: var(--spacing-md);
-  margin-top: var(--spacing-md);
+  gap: var(--spacing-m);
+  margin: var(--spacing-m) 0;
 }
 
 .about-text .social-icons a {
-  width: 3.5rem;
+  width: var(--spacing-2xl);
   aspect-ratio: 1;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: var(--font-size-md);
-  border-radius: var(--border-rounded);
-  background: var(--color-primary);
+  font-size: var(--font-size-3);
+  border-radius: 50%;
+  background: var(--color-accent);
   color: var(--color-text-inverse);
   transition: color 500ms ease-in-out;
 
   &:hover {
-    color: var(--color-accent);
+    color: var(--color-primary);
     --fill: 100%;
   }
 }
@@ -361,7 +374,7 @@ header nav a.current::after {
   position: absolute;
   inset: -3px;
   background: conic-gradient(
-    var(--color-accent) var(--fill),
+    var(--color-primary) var(--fill),
     transparent var(--fill)
   );
   z-index: -1;
@@ -396,15 +409,15 @@ header nav a.current::after {
   background: conic-gradient(
     from var(--angle),
     transparent 70%,
-    var(--color-primary)
+    var(--color-accent)
   );
-  border-radius: var(--border-rounded);
+  border-radius: 50%;
   z-index: -1;
   animation: 3s spin ease-in-out infinite;
 }
 
 .about-img::before {
-  filter: blur(20px);
+  filter: blur(10px);
 }
 
 .img-box {
@@ -412,20 +425,27 @@ header nav a.current::after {
   height: 100%;
   overflow: hidden;
   background: var(--color-bg);
-  border-radius: var(--border-rounded);
+  border-radius: 50%;
 }
 
-.container h2.skill {
+/* SKILL */
+.container.skill h2.skill {
   line-height: 2;
 }
 
-.skill-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: var(--spacing-normal);
+.container.skill {
+  position: relative;
 }
 
-.skill-container .card {
+.skill-container {
+  max-width: min(85%, 1440px);
+  margin: 0 auto var(--spacing-l) auto;
+  padding: 20px 10px;
+  overflow: hidden;
+  user-select: none;
+}
+
+.card-list .card {
   display: block;
   position: relative;
   z-index: 1;
@@ -435,20 +455,20 @@ header nav a.current::after {
   }
 }
 
-.skill-container .card::after,
-.skill-container .card::before {
+.card-list .card::after,
+.card-list .card::before {
   content: "";
   position: absolute;
   border-radius: inherit;
 }
 
-.skill-container .card::before {
+.card-list .card::before {
   background: var(--color-bg);
   z-index: -1;
   inset: 0;
 }
 
-.skill-container .card::after {
+.card-list .card::after {
   background: conic-gradient(
     var(--color-primary) var(--fill),
     transparent var(--fill)
@@ -459,18 +479,36 @@ header nav a.current::after {
   transition: --fill 500ms ease-in-out;
 }
 
-.skill-container .card span {
-  display: flex;
-  align-items: center;
-  gap: var(--spacing-sm);
-  font-size: calc(var(--font-size-md) * 0.75);
+.card-list .card.swiper-slide {
+  height: var(--scale-360-500);
+}
+
+div.card-icon {
+  max-width: 100%;
+  background: var(--color-accent);
+  border-radius: inherit;
+  aspect-ratio: 16/9;
+}
+
+.card-icon .icon {
+  color: var(--color-text-inverse);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-text {
+  margin: 1rem 0;
+}
+
+.card-text h4 {
   font-weight: 500;
 }
 
 @media (max-width: 1024px) {
   #about .container:first-child {
     grid-template-columns: 1fr;
-    gap: var(--spacing-md);
+    gap: var(--spacing-m);
   }
 
   .about-text {
@@ -480,16 +518,6 @@ header nav a.current::after {
     max-width: 64vw;
     justify-self: center;
     order: 1;
-  }
-
-  .skill-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 768px) {
-  .skill-container {
-    grid-template-columns: 1fr;
   }
 }
 
@@ -535,7 +563,7 @@ header nav a.current::after {
   background: var(--color-text);
   width: 3px;
   height: 100%;
-  border-radius: var(--border-radius-lg);
+  border-radius: 100px;
 }
 
 .timeline-item {
@@ -551,8 +579,7 @@ header nav a.current::after {
 }
 
 .timeline-item h3 {
-  font-size: calc(var(--font-size-md) * 0.85);
-  font-weight: 500;
+  font-size: var(--font-size-1);
 }
 
 .timeline-item p.tagline {
@@ -579,12 +606,12 @@ header nav a.current::after {
 }
 
 .timeline-circle {
-  width: 100%;
-  max-width: 50px;
-  min-width: 50px;
   height: 100%;
-  max-height: 50px;
-  min-height: 50px;
+  min-height: 60px;
+  max-height: 60px;
+  width: 100%;
+  min-width: 60px;
+  max-width: 60px;
   position: sticky;
   top: 50%;
   transform: translateY(-50%);
@@ -656,7 +683,7 @@ header nav a.current::after {
     "title title"
     "text form"
     "text form";
-  gap: var(--spacing-normal);
+  gap: var(--spacing-s);
 }
 
 #contact .container h2 {
@@ -680,14 +707,14 @@ header nav a.current::after {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-normal);
+  gap: var(--spacing-s);
 }
 
 .input-group label {
   position: absolute;
   top: 0px;
   left: 0;
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-0);
   pointer-events: fill;
   transition: all 500ms ease-in;
 }
@@ -698,14 +725,14 @@ header nav a.current::after {
   border-bottom: 1.5px solid var(--color-text);
   color: var(--color-text);
   transition: all 500ms;
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-0);
   resize: none;
 }
 
 .input-group input:focus,
 .input-group textarea:focus {
   color: var(--color-text);
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-0);
 }
 
 .input-group input:focus ~ label,
@@ -713,7 +740,7 @@ header nav a.current::after {
 .input-group textarea:focus ~ label,
 .input-group textarea:not(:placeholder-shown) ~ label {
   top: -2rem;
-  font-size: calc(var(--font-size-normal) * 0.9);
+  font-size: calc(var(--font-size-0) * 0.9);
 }
 
 .input-group label::after,
@@ -722,14 +749,9 @@ header nav a.current::after {
   font-weight: 600;
 }
 
-form button.btn {
+form button {
   text-align: center;
-  color: var(--color-text-inverse);
-  background: var(--color-text);
-  &:hover {
-    color: var(--color-text);
-    background: var(--color-primary);
-  }
+  box-shadow: 3px 3px 5px var(--color-shadow);
 }
 
 #contact .container .popup-message {
@@ -754,7 +776,7 @@ form button.btn {
   opacity: 0;
   scale: 0.95;
   color: #e1e7e0;
-  z-index: 2;
+  z-index: 12;
 }
 #contact .container .popup-message.show {
   visibility: visible;
@@ -767,7 +789,7 @@ form button.btn {
   position: fixed;
   inset: 0;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+  z-index: 11;
   backdrop-filter: blur(5px);
   visibility: hidden;
   opacity: 0;
