--- a/assets/css/preflight.css
+++ b/assets/css/preflight.css
@@ -6,52 +6,32 @@ body {
 }
 
 h1 {
-  font-size: var(--font-size-xxl);
-  font-weight: var(--font-weight-bold);
-  line-height: var(--line-xl);
-  letter-spacing: clamp(0.5px, 0.2vw, 2px);
+  font-size: var(--font-size-4);
+  font-weight: 700;
+  line-height: 2;
 }
 
 h2 {
-  font-size: var(--font-size-xl);
-  font-weight: var(--font-weight-sm);
-  line-height: var(--line-lg);
-  letter-spacing: clamp(0.4px, 0.15vw, 1.5px);
+  font-size: var(--font-size-3);
+  font-weight: 600;
+  line-height: 2;
 }
 
 h3 {
-  font-size: var(--font-size-lg);
-  font-weight: var(--font-weight-sm);
-  line-height: var(--line-lg);
-  letter-spacing: clamp(0.3px, 0.1vw, 1px);
+  font-size: var(--font-size-2);
+  font-weight: 500;
 }
 
 h4 {
-  font-size: var(--font-size-md);
-  font-weight: var(--font-weight-sm);
-  line-height: var(--line-lg);
-  letter-spacing: clamp(0.2px, 0.05vw, 0.8px);
+  font-size: var(--font-size-1);
+  font-weight: 500;
 }
 
-p,
-a {
-  font-size: var(--font-size-normal);
-  font-weight: var(--font-weight-normal);
-  line-height: 1.5;
-  letter-spacing: clamp(0.1px, 0.02vw, 0.5px);
-}
-
-/* HEADER */
-header {
-  padding: 0 5dvw;
-}
-@media (min-width: 1600px) {
-  header {
-    padding-left: calc((100% - 1440px) / 2);
-    padding-right: calc((100% - 1440px) / 2);
-  }
+p {
+  font-size: var(--font-size-0);
+  line-height: var(--spacing-m);
 }
 
 main > section:not(:first-child) {
-  padding: 8dvh 0;
+  padding: calc(8dvh + var(--spacing-s-2xl)) 0;
 }
