--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -1,3 +1,8 @@
+/* stylelint-disable declaration-block-no-redundant-longhand-properties */
+/* stylelint-disable custom-property-empty-line-before */
+/* stylelint-disable declaration-property-value-no-unknown */
+/* stylelint-disable selector-id-pattern */
+/* stylelint-disable no-descending-specificity */
 @import url("animations.css");
 @import url("properties.css");
 
@@ -7,19 +12,19 @@ header {
   top: 0;
   left: 0;
   z-index: 10;
-  width: 100%;
-  height: 8.5dvh;
-  background: transparent;
-  color: #e1e7e0;
-  transition: all 500ms linear;
   display: flex;
   align-items: center;
+  width: 100%;
+  height: 8.5dvh;
+  color: #e1e7e0;
+  background: transparent;
+  transition: all 500ms linear;
 }
 
 header .container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
 }
 
 header.scroll {
@@ -33,6 +38,7 @@ header .container .logo {
   align-items: center;
   user-select: none;
 }
+
 header .container .logo i {
   font-size: var(--font-size-1);
 }
@@ -47,8 +53,8 @@ header .container .logo:nth-child(2) {
 }
 
 #dropdownIcon {
-  rotate: 0;
   transition: 500ms;
+  rotate: 0;
 }
 
 #dropdownIcon.show {
@@ -57,32 +63,34 @@ header .container .logo:nth-child(2) {
 
 .dropdown {
   position: absolute;
+  top: -200px;
+  left: 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  top: -200px;
-  left: 0;
-  background: transparent;
   width: 150%;
   padding: 1rem;
+  background: transparent;
   border-radius: 0 0 10px 10px;
-  visibility: hidden;
   opacity: 0;
   transition: all 500ms linear;
+  visibility: hidden;
 }
 
 .dropdown.show {
   top: 100%;
-  visibility: visible;
   opacity: 1;
+  visibility: visible;
 }
+
 .dropdown button {
-  font-size: var(--font-size-1);
   display: flex;
   align-items: center;
   gap: 10px;
-  border-radius: 15px;
   padding: 0.5rem;
+  font-size: var(--font-size-1);
+  border-radius: 15px;
+
   &:hover {
     color: var(--color-text-inverse);
     background: var(--color-accent);
@@ -95,30 +103,30 @@ header.scroll .container .dropdown {
 
 header .container .menu-bar {
   display: none;
-  cursor: pointer;
-  aspect-ratio: 1/1;
   width: auto;
   height: 6dvh;
+  cursor: pointer;
+  aspect-ratio: 1/1;
 }
 
 .hamburger {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 7px;
-  flex-direction: column;
 }
 
 .hamburger .line {
   width: 100%;
   height: 4px;
-  border-radius: 50px;
   background: #e1e7e0;
-  transform-origin: center;
+  border-radius: 50px;
   transition: all 0.5s ease;
+  transform-origin: center;
 }
 
 .hamburger.active .line {
@@ -132,6 +140,7 @@ header .container .menu-bar {
 .hamburger.active .line:nth-child(2) {
   rotate: 45deg;
 }
+
 .hamburger.active .line:nth-child(3) {
   rotate: -45deg;
 }
@@ -146,8 +155,8 @@ header .container nav a {
   display: inline-block;
   font-size: var(--font-size-0);
   font-weight: 600;
-  text-transform: uppercase;
   letter-spacing: 2px;
+  text-transform: uppercase;
   transition: all 300ms ease-in-out;
 
   &:hover {
@@ -156,15 +165,15 @@ header .container nav a {
 }
 
 header .container nav a::after {
-  content: "";
   position: absolute;
-  left: 0;
   bottom: -20%;
+  left: 0;
   width: 0%;
   height: 10%;
   background: #e1e7e0;
-  transition: all 300ms ease-in-out;
   border-radius: 20px;
+  transition: all 300ms ease-in-out;
+  content: "";
 }
 
 header .container nav a.current::after {
@@ -173,49 +182,49 @@ header .container nav a.current::after {
 
 header .container #overlay {
   position: fixed;
-  inset: 0;
   z-index: -1;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  visibility: hidden;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  background: rgb(0 0 0 / 50%);
+  opacity: 0;
   transition: all 500ms ease-in-out;
   backdrop-filter: blur(5px);
+  inset: 0;
+  visibility: hidden;
 }
 
-@media (max-width: 1024px) {
+@media (width <= 1024px) {
   header .container .menu-bar {
     display: block;
   }
 
   header .container nav {
     position: absolute;
-    left: 0;
     top: -500px;
-    padding: var(--spacing-s);
+    left: 0;
     display: inline-block;
-    background: transparent;
     width: 100%;
-    visibility: hidden;
+    padding: var(--spacing-s);
+    background: transparent;
     opacity: 0;
     transition: all 0.5s linear;
+    visibility: hidden;
   }
 
   header .container nav.active {
     top: 100%;
-    visibility: visible;
     opacity: 1;
+    visibility: visible;
   }
 
   header .container nav.active ~ #overlay {
-    visibility: visible;
     opacity: 1;
     inset: 0;
+    visibility: visible;
   }
 
   header.scroll .container nav.active ~ #overlay {
-    inset: 8.5dvh 0 0 0;
+    inset: 8.5dvh 0 0;
   }
 
   header.scroll .container nav {
@@ -223,12 +232,12 @@ header .container #overlay {
   }
 
   header .container nav a {
-    display: block;
     position: relative;
     z-index: 1;
-    font-size: 120%;
+    display: block;
     margin: var(--spacing-s) 0;
     padding: var(--spacing-xs);
+    font-size: 120%;
     text-align: center;
 
     &:hover {
@@ -237,16 +246,16 @@ header .container #overlay {
   }
 
   header .container nav a::after {
-    content: "";
     position: absolute;
-    z-index: -1;
-    left: 0;
     top: 50%;
-    translate: 0 -50%;
-    border-radius: 20px;
+    left: 0;
+    z-index: -1;
     height: 100%;
     background: var(--color-primary);
+    border-radius: 20px;
     transition: all 300ms ease-in-out;
+    content: "";
+    translate: 0 -50%;
   }
 
   header.scroll .container nav a::after {
@@ -260,6 +269,7 @@ header .container #overlay {
   body.dark-mode header .container nav a.current {
     color: var(--color-primary);
   }
+
   body.dark-mode header .container nav a.current::after {
     background: var(--color-accent);
   }
@@ -275,12 +285,12 @@ header .container #overlay {
 }
 
 #hero::after {
-  content: "";
   position: absolute;
   z-index: 0;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgb(0 0 0 / 60%);
   backdrop-filter: blur(1px);
+  content: "";
+  inset: 0;
 }
 
 #hero .container {
@@ -293,13 +303,13 @@ header .container #overlay {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-s);
-  color: #e1e7e0;
   text-align: center;
+  color: #e1e7e0;
 }
 
 .banner-text h1 {
-  letter-spacing: var(--spacing-xs);
   line-height: 1;
+  letter-spacing: var(--spacing-xs);
 }
 
 .banner-text h1 span {
@@ -308,8 +318,8 @@ header .container #overlay {
 
 .banner-text a {
   display: inline-block;
-  font-size: var(--font-size-4);
   margin: var(--spacing-m);
+  font-size: var(--font-size-4);
   transition: all 500ms ease-in-out;
   animation: bounce 1500ms ease-in-out infinite;
 }
@@ -319,16 +329,16 @@ header .container #overlay {
 }
 
 .banner-text h2 span::after {
-  content: "";
   position: absolute;
-  background: #e1e7e0;
-  border-radius: 100px;
-  width: 1%;
-  height: 100%;
   top: 50%;
   right: calc(0 + 5rem);
-  translate: 0 -50%;
+  width: 1%;
+  height: 100%;
+  background: #e1e7e0;
+  border-radius: 100px;
   animation: blink 1.5s infinite;
+  content: "";
+  translate: 0 -50%;
 }
 
 /* SECTION ABOUT */
@@ -350,17 +360,17 @@ header .container #overlay {
 }
 
 .about-text .social-icons a {
-  width: var(--spacing-2xl);
-  aspect-ratio: 1;
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  width: var(--spacing-2xl);
   font-size: var(--font-size-3);
-  border-radius: 50%;
-  background: var(--color-accent);
   color: var(--color-text-inverse);
+  background: var(--color-accent);
+  border-radius: 50%;
   transition: color 500ms ease-in-out;
+  aspect-ratio: 1;
 
   &:hover {
     color: var(--color-primary);
@@ -370,16 +380,16 @@ header .container #overlay {
 
 .about-text .social-icons a::after,
 .about-text .social-icons a::before {
-  content: "";
   position: absolute;
-  inset: -3px;
+  z-index: -1;
   background: conic-gradient(
     var(--color-primary) var(--fill),
     transparent var(--fill)
   );
-  z-index: -1;
   border-radius: inherit;
   transition: --fill 500ms ease-in-out;
+  content: "";
+  inset: -3px;
 }
 
 .about-text .social-icons a::before {
@@ -387,33 +397,33 @@ header .container #overlay {
 }
 
 .about-img {
-  max-width: 32vw;
+  position: relative;
   height: auto;
+  max-width: 32vw;
+  border-radius: 50%;
   aspect-ratio: 1/1;
   justify-self: end;
-  border-radius: 50%;
-  position: relative;
 }
 
 .about-img::after,
 .about-img::before {
-  content: "";
   position: absolute;
   top: 50%;
   left: 50%;
-  translate: -50% -50%;
-  padding: 10px;
+  z-index: -1;
   width: 101.5%;
   height: auto;
-  aspect-ratio: 1/1;
+  padding: 10px;
   background: conic-gradient(
     from var(--angle),
     transparent 70%,
     var(--color-accent)
   );
   border-radius: 50%;
-  z-index: -1;
   animation: 3s spin ease-in-out infinite;
+  aspect-ratio: 1/1;
+  content: "";
+  translate: -50% -50%;
 }
 
 .about-img::before {
@@ -423,9 +433,9 @@ header .container #overlay {
 .img-box {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   background: var(--color-bg);
   border-radius: 50%;
+  overflow: hidden;
 }
 
 /* SKILL */
@@ -446,9 +456,9 @@ header .container #overlay {
 }
 
 .card-list .card {
-  display: block;
   position: relative;
   z-index: 1;
+  display: block;
 
   &:hover {
     --fill: 100%;
@@ -457,26 +467,26 @@ header .container #overlay {
 
 .card-list .card::after,
 .card-list .card::before {
-  content: "";
   position: absolute;
   border-radius: inherit;
+  content: "";
 }
 
 .card-list .card::before {
-  background: var(--color-bg);
   z-index: -1;
+  background: var(--color-bg);
   inset: 0;
 }
 
 .card-list .card::after {
+  z-index: -2;
   background: conic-gradient(
     var(--color-primary) var(--fill),
     transparent var(--fill)
   );
+  transition: --fill 500ms ease-in-out;
   filter: blur(1px);
   inset: -3px;
-  z-index: -2;
-  transition: --fill 500ms ease-in-out;
 }
 
 .card-list .card.swiper-slide {
@@ -491,9 +501,9 @@ div.card-icon {
 }
 
 .card-icon .icon {
-  color: var(--color-text-inverse);
   width: 100%;
   height: 100%;
+  color: var(--color-text-inverse);
   object-fit: cover;
 }
 
@@ -505,15 +515,16 @@ div.card-icon {
   font-weight: 500;
 }
 
-@media (max-width: 1024px) {
+@media (width <= 1024px) {
   #about .container:first-child {
-    grid-template-columns: 1fr;
     gap: var(--spacing-m);
+    grid-template-columns: 1fr;
   }
 
   .about-text {
     order: 2;
   }
+
   .about-img {
     max-width: 64vw;
     justify-self: center;
@@ -532,8 +543,8 @@ div.card-icon {
 #education .container,
 #experiences .container {
   position: relative;
-  margin: 0 auto;
   z-index: 0;
+  margin: 0 auto;
 }
 
 #education .container h2,
@@ -550,8 +561,8 @@ div.card-icon {
 .timeline-component {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   margin: 0 auto;
 }
 
@@ -559,23 +570,22 @@ div.card-icon {
   position: absolute;
   top: 50px;
   left: 50%;
-  transform: translateX(-50%);
-  background: var(--color-text);
   width: 3px;
   height: 100%;
+  background: var(--color-text);
   border-radius: 100px;
+  transform: translateX(-50%);
 }
 
 .timeline-item {
   position: relative;
   z-index: 2;
   display: grid;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr 150px 1fr;
-  grid-auto-columns: 1fr;
   padding: 80px 0;
+  grid-auto-columns: 1fr;
+  grid-gap: 0;
+  grid-template-columns: 1fr 150px 1fr;
+  grid-template-rows: auto;
 }
 
 .timeline-item h3 {
@@ -583,14 +593,14 @@ div.card-icon {
 }
 
 .timeline-item p.tagline {
-  font-style: italic;
   font-weight: 500;
+  font-style: italic;
 }
 
 .timeline-left {
-  text-align: center;
   justify-content: center;
   align-items: stretch;
+  text-align: center;
 }
 
 .timeline-date {
@@ -606,16 +616,16 @@ div.card-icon {
 }
 
 .timeline-circle {
-  height: 100%;
-  min-height: 60px;
-  max-height: 60px;
-  width: 100%;
-  min-width: 60px;
-  max-width: 60px;
   position: sticky;
   top: 50%;
-  transform: translateY(-50%);
+  width: 100%;
+  height: 100%;
+  min-width: 60px;
+  min-height: 60px;
+  max-width: 60px;
+  max-height: 60px;
   border-radius: 50%;
+  transform: translateY(-50%);
 }
 
 .timeline-circle.edu.ut {
@@ -628,28 +638,29 @@ div.card-icon {
 }
 
 .timeline-circle.expe img {
-  border-radius: 50%;
   border: 3px solid var(--color-text);
+  border-radius: 50%;
 }
 
-@media (max-width: 1024px) {
+@media (width <= 1024px) {
   #education .container h2,
   #experiences .container h2 {
     text-align: left;
   }
+
   .timeline-progress {
     left: 0;
   }
 
   .timeline-circle {
-    left: 0;
     top: 50%;
+    left: 0;
     translate: -50% -50%;
   }
 
   .timeline-item {
-    grid-template-columns: 10% 1fr;
     width: 100%;
+    grid-template-columns: 10% 1fr;
   }
 
   .timeline-left {
@@ -669,38 +680,40 @@ div.card-icon {
 
 /* CONTACT SECTION */
 #contact {
-  color: var(--color-text);
-  min-height: 100dvh;
   display: flex;
   align-items: center;
+  min-height: 100dvh;
+  color: var(--color-text);
 }
 
 #contact .container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, auto);
+  gap: var(--spacing-s);
   grid-template-areas:
     "title title"
     "text form"
     "text form";
-  gap: var(--spacing-s);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
 }
 
 #contact .container h2 {
   grid-area: title;
 }
+
 #contact .container .contact-text {
   grid-area: text;
 }
+
 #contact .container form {
   grid-area: form;
 }
 
 .container form {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 3rem;
   position: relative;
+  display: grid;
+  gap: 3rem;
+  grid-template-columns: 1fr;
 }
 
 .input-group {
@@ -712,27 +725,27 @@ div.card-icon {
 
 .input-group label {
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 0;
   font-size: var(--font-size-0);
-  pointer-events: fill;
   transition: all 500ms ease-in;
+  pointer-events: fill;
 }
 
 .input-group input,
 .input-group textarea {
-  background: transparent;
-  border-bottom: 1.5px solid var(--color-text);
-  color: var(--color-text);
-  transition: all 500ms;
   font-size: var(--font-size-0);
+  color: var(--color-text);
+  background: transparent;
+  transition: all 500ms;
+  border-bottom: 1.5px solid var(--color-text);
   resize: none;
 }
 
 .input-group input:focus,
 .input-group textarea:focus {
-  color: var(--color-text);
   font-size: var(--font-size-0);
+  color: var(--color-text);
 }
 
 .input-group input:focus ~ label,
@@ -745,8 +758,8 @@ div.card-icon {
 
 .input-group label::after,
 .input-group textarea::after {
-  content: " *";
   font-weight: 600;
+  content: " *";
 }
 
 form button {
@@ -755,94 +768,91 @@ form button {
 }
 
 #contact .container .popup-message {
-  display: flex;
-  gap: 1rem;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   position: fixed;
-  width: 100%;
-  max-width: min(950px, 80%);
   top: 50%;
   left: 50%;
-  translate: -50% -50%;
-  background: var(--color-primary);
+  z-index: 12;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  max-width: min(950px, 80%);
   padding: 1.5rem;
+  color: #e1e7e0;
+  background: var(--color-primary);
   border-radius: 20px;
+  box-shadow: 0 0 10px var(--color-shadow);
+  opacity: 0;
   transition: all 750ms ease-in-out;
   pointer-events: none;
-  box-shadow: 0 0 10px var(--color-shadow);
-  visibility: hidden;
-  opacity: 0;
   scale: 0.95;
-  color: #e1e7e0;
-  z-index: 12;
+  translate: -50% -50%;
+  visibility: hidden;
 }
+
 #contact .container .popup-message.show {
-  visibility: visible;
   opacity: 1;
-  scale: 1;
   pointer-events: all;
+  scale: 1;
+  visibility: visible;
 }
 
 .popup-overlay {
   position: fixed;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.5);
   z-index: 11;
-  backdrop-filter: blur(5px);
-  visibility: hidden;
+  background: rgb(0 0 0 / 50%);
   opacity: 0;
   transition: all 0.5s linear;
+  backdrop-filter: blur(5px);
+  inset: 0;
+  visibility: hidden;
 }
 
 .popup-message.show ~ .popup-overlay {
-  visibility: visible;
   opacity: 1;
+  visibility: visible;
 }
 
-@media (max-width: 1024px) {
+@media (width <= 1024px) {
   #contact .container {
-    grid-template-columns: 1fr;
     gap: 3rem;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "title"
-      "text"
-      "form";
+    grid-template:
+      "title" auto "text" auto "form" auto / 1fr;
   }
 }
 
 #footer {
+  position: relative;
   color: #e1e7e0;
   background: var(--color-primary);
-  position: relative;
 }
 
 footer .container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto auto auto;
+  gap: 1.5rem;
+  padding: 1rem;
   grid-template-areas:
     "logo nav links"
     "logo nav links"
     "copyright copyright copyright";
-  gap: 1.5rem;
-  padding: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto auto;
 }
 
 .footer-logo {
+  text-align: left;
   cursor: default;
   grid-area: logo;
-  text-align: left;
 }
 
 .footer-link {
-  grid-area: links;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 0.7rem;
+  grid-area: links;
 }
 
 .footer-link p,
@@ -857,17 +867,17 @@ footer .container {
 }
 
 .footer-nav {
-  grid-area: nav;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 0.7rem;
+  grid-area: nav;
 }
 
 .footer-copyright {
-  grid-area: copyright;
-  text-align: center;
   font-size: 0.875rem;
+  text-align: center;
+  grid-area: copyright;
 }
 
 .footer-link a,
@@ -881,13 +891,14 @@ footer .container {
   color: var(--color-bg);
 }
 
-@media (max-width: 1024px) {
+@media (width <= 1024px) {
   footer .container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: min(1rem, 8%);
   }
+
   .footer-copyright {
     width: 100%;
     text-align: center;
