--- a/assets/css/preflight.css
+++ b/assets/css/preflight.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
 body {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   background: var(--color-bg);
 }
 
