--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,31 +1,23 @@
-:root {
-  --color-bg: #d4f1f4;
-  --color-text-inverse: #e1e7e0;
-  --color-text: #2b4560;
-  --color-primary: #09a9c8;
-  --color-primary-dark: #0b7489;
-  --color-accent: #05445e;
-  --color-shadow: rgb(0 0 0 / 50%);
-}
-
 /* THEME */
 body.light-mode {
-  --color-bg: #d4f1f4;
-  --color-text-inverse: #e1e7e0;
-  --color-text: #2b4560;
-  --color-primary: #09a9c8;
-  --color-accent: #05445e;
+  --color-bg: #f6f8f7;
+  --color-surface: #f0f3fc;
+  --color-text-inverse: var(--color-bg);
+  --color-text: #41495a;
+  --color-primary: #e9eefa;
+  --color-accent: #005cbb;
   --color-shadow: rgb(0 0 0 / 50%);
   --swiper-navigation-color: var(--color-accent);
   --swiper-pagination-color: var(--color-accent);
 }
 
 body.dark-mode {
-  --color-bg: #2b4560;
-  --color-text-inverse: #2b4560;
+  --color-bg: #1a1b1f;
+  --color-surface: #21242a;
+  --color-text-inverse: var(--color-bg);
   --color-text: #e1e7e0;
-  --color-primary: #15273a;
-  --color-accent: #d4f1f4;
+  --color-primary: #262931;
+  --color-accent: #abc7ff;
   --color-shadow: rgb(255 255 255 / 50%);
   --swiper-navigation-color: var(--color-accent);
   --swiper-pagination-color: var(--color-accent);
@@ -33,13 +25,12 @@ body.dark-mode {
 
 @media (prefers-color-scheme: light) {
   :root {
-    --color-bg: #d4f1f4;
-    --color-text-inverse: #e1e7e0;
-    --color-text: #2b4560;
-    --color-primary: #09a9c8;
-    --color-primary-dark: #0b7489;
-    --color-accent: #05445e;
-    --color-accent1: #05445e;
+    --color-bg: #f6f8f7;
+    --color-surface: #f0f3fc;
+    --color-text-inverse: var(--color-bg);
+    --color-text: #41495a;
+    --color-primary: #e9eefa;
+    --color-accent: #005cbb;
     --color-shadow: rgb(0 0 0 / 50%);
     --swiper-navigation-color: var(--color-accent);
     --swiper-pagination-color: var(--color-accent);
@@ -48,13 +39,12 @@ body.dark-mode {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-bg: #2b4560;
-    --color-text-inverse: #2b4560;
+    --color-bg: #1a1b1f;
+    --color-surface: #21242a;
+    --color-text-inverse: var(--color-bg);
     --color-text: #e1e7e0;
-    --color-primary: #15273a;
-    --color-primary-dark: #0d1823;
-    --color-accent: #d4f1f4;
-    --color-accent1: #05445e;
+    --color-primary: #262931;
+    --color-accent: #abc7ff;
     --color-shadow: rgb(255 255 255 / 50%);
     --swiper-navigation-color: var(--color-accent);
     --swiper-pagination-color: var(--color-accent);
